@@ -11,6 +11,7 @@
 - Add missing include_once('kernel/common/i18n.php'); in index_ajax.php
 - Make sure admin user has access to /call even if PolicyOmitList/AnonymousAccessList is commented
 - Add html comments around inline css and javascript
+- Add support for c.arguments on Y.io.ez() like Y.io() has
 
 
 # v1.0.0  29 Sept 2009
